--- a/Lunchly/app/src/main/res/layout/orders_adapter.xml
+++ b/Lunchly/app/src/main/res/layout/orders_adapter.xml
@@ -24,6 +24,7 @@
         android:layout_toRightOf="@id/icon"
         android:gravity="center_vertical"
         android:text="Location"
+        android:textColor="@color/textColor"
         android:textSize="16sp" />
 
     <TextView
@@ -36,6 +37,7 @@
         android:ellipsize="marquee"
         android:singleLine="true"
         android:text="Estimated Cost"
+        android:textColor="@color/textColor"
         android:textSize="12sp" />
 
 </RelativeLayout>
