Added auto complete function to "Where are you going?" screen
Minor changes to "Orders" screen as well

--- a/Lunchly/app/src/main/res/layout/activity_orders.xml
+++ b/Lunchly/app/src/main/res/layout/activity_orders.xml
@@ -102,8 +102,9 @@
         android:id="@+id/switchGPS"
         android:layout_alignParentRight="true"
         android:layout_alignBottom="@+id/textView4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:checked="false"
+        android:layout_toRightOf="@+id/textView2"
+        android:layout_toEndOf="@+id/textView2" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -111,7 +112,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="1:21"
         android:textColor="@color/textColor"
-        android:id="@+id/time"
+        android:id="@+id/timeTillDrop"
         android:layout_above="@+id/textView4"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -121,7 +122,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="8/12"
-        android:id="@+id/orders"
+        android:id="@+id/numberOfOrders"
         android:textColor="@color/textColor"
         android:layout_below="@+id/textView4"
         android:layout_alignParentRight="true"
@@ -133,7 +134,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="$21.78"
         android:textColor="@color/textColor"
-        android:id="@+id/cost"
+        android:id="@+id/totalCost"
         android:layout_alignBottom="@+id/textView6"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -144,7 +145,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="$0.00"
         android:textColor="@color/textColor"
-        android:id="@+id/textView8"
+        android:id="@+id/totalProfit"
         android:layout_alignBottom="@+id/textView7"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
