--- a/Lunchly/app/src/main/res/layout/activity_login.xml
+++ b/Lunchly/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:id="@+id/button2"
+        android:id="@+id/loginButton"
+        android:background="@drawable/custombutton"
+        android:onClick="login"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
