--- a/Lunchly/app/src/main/res/layout/activity_timeselect.xml
+++ b/Lunchly/app/src/main/res/layout/activity_timeselect.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TimeSelectActivity"
     android:background="@android:color/white">
 
-<TimePicker
+    <TimePicker
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/timePicker"
@@ -16,9 +16,10 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/custombutton"
         android:text="Next"
         android:id="@+id/button"
-        android:onClick="setDropoffTime"
+        android:onClick="next"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -30,6 +31,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Drop-off time"
+        android:textColor="@color/textColor"
         android:textSize="30sp"
         android:id="@+id/time"
         android:layout_marginBottom="10dp"
