--- a/Lunchly/app/src/main/res/layout/activity_feed.xml
+++ b/Lunchly/app/src/main/res/layout/activity_feed.xml
@@ -6,38 +6,43 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TimeSelectActivity"
     android:background="@android:color/white">
 
-    <TimePicker
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/timePicker"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/editText3"
+        android:hint="Filters"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/custombuttongreen"
-        android:text="Next"
+        android:background="@drawable/custombuttonblue"
+        android:text="Going Somewhere?"
         android:textStyle="bold"
         android:textColor="@color/white"
+        android:onClick="goingSomewhere"
         android:id="@+id/button"
-        android:onClick="next"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <TextView
+    <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Drop-off time"
-        android:textColor="@color/textColor"
-        android:textSize="30sp"
-        android:id="@+id/time"
-        android:layout_marginBottom="10dp"
-        android:layout_above="@+id/timePicker"
-        android:layout_centerHorizontal="true" />
-
+        android:name="com.example.lunchly.FeedFragment"
+        android:id="@+id/fragment"
+        android:layout_below="@+id/editText3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/button"
+        android:layout_alignRight="@+id/editText3"
+        android:layout_alignEnd="@+id/editText3" />
 </RelativeLayout>
