--- a/Lunchly/app/src/main/res/layout/activity_finalize.xml
+++ b/Lunchly/app/src/main/res/layout/activity_finalize.xml
@@ -110,8 +110,10 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/custombutton"
+        android:background="@drawable/custombuttongreen"
         android:text="Finish"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         android:id="@+id/finish"
         android:onClick="finalize"
         android:layout_alignParentBottom="true"
