--- a/Lunchly/app/src/main/res/layout/activity_login.xml
+++ b/Lunchly/app/src/main/res/layout/activity_login.xml
@@ -40,8 +40,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         android:id="@+id/loginButton"
-        android:background="@drawable/custombutton"
+        android:background="@drawable/custombuttongreen"
         android:onClick="login"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
