--- a/Lunchly/app/src/main/res/layout/activity_orders.xml
+++ b/Lunchly/app/src/main/res/layout/activity_orders.xml
@@ -13,15 +13,23 @@
         android:name="com.example.lunchly.OrdersFragment"
         android:id="@+id/fragment"
         android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/custombutton"
+        android:background="@drawable/custombuttongreen"
         android:text="No New Orders"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         android:id="@+id/button"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/textView7"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -31,13 +39,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Starbucks"
+        android:text="Details"
         android:textStyle="bold"
         android:textColor="@color/textColor"
         android:textSize="40dp"
         android:id="@+id/textView2"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
