--- a/Lunchly/app/src/main/res/values/colors.xml
+++ b/Lunchly/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="background">#2c666666</color>
     <color name="textColor">#ff000000</color>
+    <color name="white">#ffffffff</color>
 </resources>
