--- a/Lunchly/app/src/main/res/layout/activity_finalize.xml
+++ b/Lunchly/app/src/main/res/layout/activity_finalize.xml
@@ -1,10 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FinalizeActivity"
-    android:background="@android:color/white">
+    android:background="@android:color/white" android:focusableInTouchMode="true">
 
 
     <TextView
@@ -65,8 +64,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignBottom="@+id/smallPri"
-        android:layout_alignLeft="@+id/numberPicker"
-        android:layout_alignStart="@+id/numberPicker" />
+        android:layout_toRightOf="@+id/smallPri"
+        android:layout_toEndOf="@+id/smallPri" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -101,6 +100,8 @@
         android:text="How much you will charge per order"
         android:id="@+id/smallPremium"
         android:layout_marginBottom="45dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_above="@+id/finish"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
