--- a/Lunchly/app/src/main/res/layout/activity_login.xml
+++ b/Lunchly/app/src/main/res/layout/activity_login.xml
@@ -65,4 +65,12 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView4"
+        android:layout_below="@+id/imageView3"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/facebook" />
+
 </RelativeLayout>
