--- a/Lunchly/app/src/main/res/layout/activity_orders.xml
+++ b/Lunchly/app/src/main/res/layout/activity_orders.xml
@@ -112,8 +112,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignBottom="@+id/textView4"
         android:checked="false"
-        android:layout_toRightOf="@+id/textView2"
-        android:layout_toEndOf="@+id/textView2" />
+        android:layout_toEndOf="@+id/textView6"
+        android:layout_below="@+id/timeTillDrop"
+        android:layout_toRightOf="@+id/textView6" />
 
     <TextView
         android:layout_width="wrap_content"
