--- a/Lunchly/app/src/main/res/layout/activity_orders.xml
+++ b/Lunchly/app/src/main/res/layout/activity_orders.xml
@@ -22,11 +22,12 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/custombuttongreen"
+        android:background="@drawable/custombuttonred"
         android:text="No New Orders"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:id="@+id/button"
+        android:onClick="pressed"
         android:layout_below="@+id/textView7"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
@@ -38,14 +39,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Details"
         android:textStyle="bold"
         android:textColor="@color/textColor"
         android:textSize="40dp"
         android:id="@+id/textView2"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
