--- a/Lunchly/app/src/main/res/values/colors.xml
+++ b/Lunchly/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#2c666666</color>
+    <color name="background">#e8e9eb</color>
+    <color name="lightTextColor">#8f95a1</color>
     <color name="textColor">#ff000000</color>
     <color name="white">#ffffffff</color>
+
+    <color name="green">#79cf38</color>
+    <color name="darkGreen">#54ad15</color>
+    <color name="blue">#5f80c2</color>
+    <color name="darkBlue">#425f99</color>
 </resources>
