More updates to "Feed" UI

--- a/Lunchly/app/src/main/res/layout/activity_feed.xml
+++ b/Lunchly/app/src/main/res/layout/activity_feed.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:id="@+id/relativeLayout" android:layout_marginBottom="@dimen/activity_vertical_margin">
+        android:id="@+id/relativeLayout" android:layout_marginBottom="8dp">
 
         <EditText
             android:layout_width="wrap_content"
@@ -23,8 +23,8 @@
             android:layout_toStartOf="@+id/profile" />
 
         <ImageView
-            android:layout_width="?android:attr/listPreferredItemHeight"
-            android:layout_height="?android:attr/listPreferredItemHeight"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/profile"
             android:onClick="openProfile"
             android:layout_alignParentTop="true"
