--- a/Lunchly/app/src/main/res/layout/activity_login.xml
+++ b/Lunchly/app/src/main/res/layout/activity_login.xml
@@ -6,33 +6,72 @@
     android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@android:color/white">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="example@gmail.com"
-        android:ems="10"
-        android:id="@+id/email"
-        android:layout_below="@+id/textView8"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="password"
-        android:ems="10"
-        android:id="@+id/password"
-        android:layout_below="@+id/email"
-        android:layout_centerHorizontal="true" />
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView3"
+        android:id="@+id/logo"
         android:src="@drawable/logo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <LinearLayout
+        android:layout_width="match_parent" android:layout_height="100dp"
+        android:layout_below="@+id/logo" android:layout_above="@+id/loginButton"
+        android:orientation="vertical" android:gravity="center_horizontal" >
+
+        <RelativeLayout
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:layout_weight="1" android:gravity="center" >
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="OR"
+            android:textStyle="bold"
+            android:textSize="26sp"
+            android:textColor="@color/textColor"
+            android:id="@+id/textView8" />
+
+        <RelativeLayout
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:layout_weight="1" android:gravity="center">
+
+            <RelativeLayout
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp" android:paddingBottom="10dp" >
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:hint="example@gmail.com"
+                    android:ems="10"
+                    android:id="@+id/email"
+                    android:layout_centerHorizontal="true" />
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:hint="password"
+                    android:ems="10"
+                    android:id="@+id/password"
+                    android:layout_below="@+id/email"
+                    android:layout_centerHorizontal="true" />
+
+            </RelativeLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
+
 
     <Button
         android:layout_width="wrap_content"
@@ -43,32 +82,19 @@
         android:id="@+id/loginButton"
         android:background="@drawable/custombuttongreen"
         android:onClick="login"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="OR"
-        android:textStyle="bold"
-        android:textSize="26sp"
-        android:textColor="@color/textColor"
-        android:id="@+id/textView8"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView4"
-        android:layout_below="@+id/imageView3"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/facebook" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/imageView4"-->
+        <!--android:layout_below="@+id/imageView3"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:src="@drawable/facebook" />-->
 
 </RelativeLayout>
