--- a/Lunchly/app/src/main/res/layout/activity_profile.xml
+++ b/Lunchly/app/src/main/res/layout/activity_profile.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView5"
+        android:id="@+id/profileImage"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -21,7 +21,7 @@
         android:textSize="35sp"
         android:textStyle="bold"
         android:id="@+id/name"
-        android:layout_below="@+id/imageView5"
+        android:layout_below="@+id/profileImage"
         android:layout_centerHorizontal="true" />
 
     <TextView
