--- a/Lunchly/app/src/main/res/layout/activity_orders.xml
+++ b/Lunchly/app/src/main/res/layout/activity_orders.xml
@@ -1,12 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:padding="@dimen/activity_horizontal_margin"
-    tools:context=".OrdersActivity" android:background="@color/background">
+    android:layout_height="match_parent" tools:context=".OrdersActivity"
+    android:background="@color/background">
 
     <fragment
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:name="com.example.lunchly.OrdersFragment"
-        android:id="@+id/fragment" />
+        android:id="@+id/fragment"
+        android:layout_margin="15dp" />
 
 </RelativeLayout>
